Move to published plugins